plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.7'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.mysite'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Spring Boot Starter Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    
    // Spring Boot Starter Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    
    // Spring Boot Starter JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // Thymeleaf Template Engine
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    
    // JSON Library
    implementation 'org.json:json:20230227'
    
    // Swagger Documentation
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
    
    // Spring Boot Starter WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
}

tasks.named('test') {
	useJUnitPlatform()
}
compileJava {	options.compilerArgs << '-parameters'}


